<resources>
    <string name="app_name">Weather App</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="get_weather">Get Weather</string>
    <string name="degree">12°C</string>
    <string name="city_name">City Name</string>
    <string name="country_code">Country Code</string>
    <string name="error_message">Try Again</string>
    <string name="greetings">Hello, Today\'s Weather At</string>
    <string name="daily_weather">Here\'s 7 Day Weather</string>
    <string name="status">Clear Sky</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="clock">clock</string>
    <string name="sunset">sunset</string>
    <string name="_06_40_am">Time</string>
    <string name="wind">wind</string>
    <string name="pressure">Pressure</string>
    <string name="clear_sky">clear sky</string>
    <string name="please_wait">Please Wait</string>
    <string name="visibility">Visibility</string>
</resources>