<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_city_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_greetings"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_day"
            android:padding="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_city_code">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_degree"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="@dimen/_15dp">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cloud"
                    android:tint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_degree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/degree"
                    android:textSize="80sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_sky"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/iv_weather"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/tv_degree">


                    <TextView
                        android:id="@+id/tv_min_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textColor="@color/white"
                        android:textSize="10sp"/>

                    <TextView
                        android:id="@+id/tv_max_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_degree"
            android:layout_marginTop="@dimen/_10dp">

            <LinearLayout
                android:id="@+id/view_details_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/view_sunrise"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5dp"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <ImageView
                        android:id="@+id/iv_sunrise"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_sunset"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5dp"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <ImageView
                        android:id="@+id/iv_sunset"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_wind"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5dp"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <ImageView
                        android:id="@+id/iv_wind"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_details_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/view_details_one"
                android:layout_marginTop="@dimen/_10dp">

                <LinearLayout
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                     android:layout_margin="@dimen/_5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Humidity"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_details"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_5dp"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_06_40_am"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_weather"
            app:layout_constraintTop_toBottomOf="@+id/view_details"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_daily_weather"
            android:background="@drawable/bg_day"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

